# revamp-agent

./: .env.example  AGENTS.md  Dockerfile  GEMINI.md  GETTING_STARTED.md  README.md  REFACTORING_SUMMARY.md  USAGE_GUIDE.md  docker-compose.yml  main.py  prompts-lock.json  prompts.json  pyproject.toml  setup_wizard.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: cli.py  coding_agent.py  config.py  github_tools_extended.py  main.py  memory_storage.py  models.py  os.py  session_manager.py  teams_workflows.py  tools.py  web_interface.py
app/agents/: __init__.py  base_agent.py  coding_agent.py  hackathon_researcher.py  hackathon_researcher_agent.py  main_agent.py  project_analyzer.py  project_analyzer_agent.py  strategy_agent.py  strategy_developer_agent.py
app/core/: __init__.py  agent_factory.py  base_agent.py  exceptions.py
app/static/: manifest.json
app/teams/: __init__.py  base_team.py  revamp_team.py
app/tools/: __init__.py  base_tool.py  discovery.py  discovery_tools.py  github.py
app/utils/: __init__.py  config_loader.py  logger.py  url_parser.py  validation.py
app/workflows/: __init__.py  base_workflow.py  revamp_workflow.py
prompts/: coding_agent.prompt.yaml  hackathon_revamp_agent.prompt.yaml
tests/scenarios/: test_cli_commands.py  test_hackathon_revamp.py
